<resources>
    <string name="app_name">Covid_App</string>
    <string name="covid_19">Covid-19</string>
    <string name="questionario_covid">Covid Quiz</string>
    <string name="iniciar">Start</string>
    <string name="sair">Sair</string>
    <string name="image">image</string>
    <string name="edit_titulo">fill in the fields</string>
    <string name="edit_name">Name</string>
    <string name="edit_phone">Phone</string>
    <string name="edit_age">Age</string>
    <string name="edit_address">Address</string>
    <string name="edit_gender">Gender</string>
    <string name="button_continue">Continue</string>
    <string name="button_continue2">Conclude</string>
    <string name="edit_viajar">Recently Traveled</string>
    <string name="edit_asma">Has breathing problems</string>
    <string name="edit_sintomas">There have been some symptoms</string>
    <string name="edit_teste">Do you think it\'s important to take the test?</string>
    <string name="edt_sint">Ex: Cough, Fever .... or No</string>
    <string name="button_submit">To submit</string>
    <string name="button_quest">Other Questionnaires</string>
</resources>
